tests/checker/bad/bad_comment_1.scilla
scilla_version 0

(* this is an unfinished comment

library BadComment_1

contract BadComment_1 ()
